Refactor deprecated method accessibility checks, enhance error handling in alert reloading, and improve channel topic update logic with permission recovery. Update DiscordUtil to support async callbacks for topic setting and suppress warnings for legacy sound methods.